# opencl-playground

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/kernels/: kernel.cl
